--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta http-equiv="refresh" content="0; url='https://alist.nn.ci/'">
+  <meta http-equiv="refresh" content="0; url='https://blog5.ragroup.us.kg/'">
   <title>Redirecting...</title>
 </head>
 <body>
